instruccion en la primera linea del main

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,6 @@
+/*SI EL TAILWIND Y/O EL @APPLY MARCA ERROR DESCARGA
+ESTA ESTENSIONS Tilwind CSS Intellisense */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
