instruccion en la primera linea del main

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,5 @@
 /*SI EL TAILWIND Y/O EL @APPLY MARCA ERROR DESCARGA
-ESTA ESTENSIONS Tilwind CSS Intellisense */
+ESTA ESTENSIONS Tailwind CSS Intellisense */
 
 @tailwind base;
 @tailwind components;
